--- a/set_theory.ipynb
+++ b/set_theory.ipynb
@@ -129,7 +129,7 @@
    "metadata": {},
    "source": [
     "1.) \\\n",
-    "If $A = {\\{2,3,4,5}\\},$ and $B = {\\{x}\\in \\N|{x} \\ is \\ even\\}$ \\\n",
+    "If $A = {\\{2,3,4,5}\\},$ and $B = {\\{x}\\in$ N $|{x} \\ is \\ even\\}$ \\\n",
     "Is $A \\subset B$?\n",
     "\n",
     "$2 \\in B$ since 2 is even \\\n",
